// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots — link 1`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer bg-g-60 h-10 hover:bg-g-50 focus:bg-g-40 rounded-lg p-3 button-text"
  rel="noreferrer"
>
  <svg
    aria-hidden="true"
    className="w-4 -ml-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span>
    Click me
  </span>
</a>
`;

exports[`snapshots — link 2`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer bg-g-60 h-10 hover:bg-g-50 focus:bg-g-40 rounded-lg p-3 button-text"
  rel="noreferrer"
>
  <span>
    Click me
  </span>
  <svg
    aria-hidden="true"
    className="w-4 !-mr-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
</a>
`;

exports[`snapshots — link 3`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer bg-g-60 h-10 hover:bg-g-50 focus:bg-g-40 rounded-lg p-3 button-text"
  rel="noreferrer"
>
  <span>
    Click me
  </span>
</a>
`;

exports[`snapshots — link 4`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer bg-g-60 h-10 hover:bg-g-50 focus:bg-g-40 rounded-lg px-6 py-4 button-text"
  rel="noreferrer"
>
  <svg
    aria-hidden="true"
    className="w-5 -ml-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span>
    Click me
  </span>
</a>
`;

exports[`snapshots — link 5`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer bg-g-60 h-10 hover:bg-g-50 focus:bg-g-40 rounded-lg px-6 py-4 button-text"
  rel="noreferrer"
>
  <span>
    Click me
  </span>
  <svg
    aria-hidden="true"
    className="w-5 !-mr-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
</a>
`;

exports[`snapshots — link 6`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer bg-g-60 h-10 hover:bg-g-50 focus:bg-g-40 rounded-lg px-6 py-4 button-text"
  rel="noreferrer"
>
  <span>
    Click me
  </span>
</a>
`;

exports[`snapshots — link 7`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer bg-g-60 h-10 hover:bg-g-50 focus:bg-g-40 rounded-lg py-2 px-4 button-text"
  rel="noreferrer"
>
  <svg
    aria-hidden="true"
    className="w-6 -ml-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span>
    Click me
  </span>
</a>
`;

exports[`snapshots — link 8`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer bg-g-60 h-10 hover:bg-g-50 focus:bg-g-40 rounded-lg py-2 px-4 button-text"
  rel="noreferrer"
>
  <span>
    Click me
  </span>
  <svg
    aria-hidden="true"
    className="w-6 !-mr-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
</a>
`;

exports[`snapshots — link 9`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer bg-g-60 h-10 hover:bg-g-50 focus:bg-g-40 rounded-lg py-2 px-4 button-text"
  rel="noreferrer"
>
  <span>
    Click me
  </span>
</a>
`;

exports[`snapshots — link 10`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer custom-gradient hover:hover-gradient focus:pressed-gradient rounded-full p-3 button-text"
  rel="noreferrer"
>
  <svg
    aria-hidden="true"
    className="w-4 -ml-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span>
    Click me
  </span>
</a>
`;

exports[`snapshots — link 11`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer custom-gradient hover:hover-gradient focus:pressed-gradient rounded-full p-3 button-text"
  rel="noreferrer"
>
  <span>
    Click me
  </span>
  <svg
    aria-hidden="true"
    className="w-4 !-mr-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
</a>
`;

exports[`snapshots — link 12`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer custom-gradient hover:hover-gradient focus:pressed-gradient rounded-full p-3 button-text"
  rel="noreferrer"
>
  <span>
    Click me
  </span>
</a>
`;

exports[`snapshots — link 13`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer custom-gradient hover:hover-gradient focus:pressed-gradient rounded-full px-6 py-4 button-text"
  rel="noreferrer"
>
  <svg
    aria-hidden="true"
    className="w-5 -ml-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span>
    Click me
  </span>
</a>
`;

exports[`snapshots — link 14`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer custom-gradient hover:hover-gradient focus:pressed-gradient rounded-full px-6 py-4 button-text"
  rel="noreferrer"
>
  <span>
    Click me
  </span>
  <svg
    aria-hidden="true"
    className="w-5 !-mr-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
</a>
`;

exports[`snapshots — link 15`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer custom-gradient hover:hover-gradient focus:pressed-gradient rounded-full px-6 py-4 button-text"
  rel="noreferrer"
>
  <span>
    Click me
  </span>
</a>
`;

exports[`snapshots — link 16`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer custom-gradient hover:hover-gradient focus:pressed-gradient rounded-full py-2 px-4 button-text"
  rel="noreferrer"
>
  <svg
    aria-hidden="true"
    className="w-6 -ml-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span>
    Click me
  </span>
</a>
`;

exports[`snapshots — link 17`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer custom-gradient hover:hover-gradient focus:pressed-gradient rounded-full py-2 px-4 button-text"
  rel="noreferrer"
>
  <span>
    Click me
  </span>
  <svg
    aria-hidden="true"
    className="w-6 !-mr-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
</a>
`;

exports[`snapshots — link 18`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer custom-gradient hover:hover-gradient focus:pressed-gradient rounded-full py-2 px-4 button-text"
  rel="noreferrer"
>
  <span>
    Click me
  </span>
</a>
`;

exports[`snapshots — link 19`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer h-10 hover:bg-g-90 focus:bg-g-80 rounded-lg p-3 button-text"
  rel="noreferrer"
>
  <svg
    aria-hidden="true"
    className="w-4 -ml-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span>
    Click me
  </span>
</a>
`;

exports[`snapshots — link 20`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer h-10 hover:bg-g-90 focus:bg-g-80 rounded-lg p-3 button-text"
  rel="noreferrer"
>
  <span>
    Click me
  </span>
  <svg
    aria-hidden="true"
    className="w-4 !-mr-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
</a>
`;

exports[`snapshots — link 21`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer h-10 hover:bg-g-90 focus:bg-g-80 rounded-lg p-3 button-text"
  rel="noreferrer"
>
  <span>
    Click me
  </span>
</a>
`;

exports[`snapshots — link 22`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer h-10 hover:bg-g-90 focus:bg-g-80 rounded-lg px-6 py-4 button-text"
  rel="noreferrer"
>
  <svg
    aria-hidden="true"
    className="w-5 -ml-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span>
    Click me
  </span>
</a>
`;

exports[`snapshots — link 23`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer h-10 hover:bg-g-90 focus:bg-g-80 rounded-lg px-6 py-4 button-text"
  rel="noreferrer"
>
  <span>
    Click me
  </span>
  <svg
    aria-hidden="true"
    className="w-5 !-mr-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
</a>
`;

exports[`snapshots — link 24`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer h-10 hover:bg-g-90 focus:bg-g-80 rounded-lg px-6 py-4 button-text"
  rel="noreferrer"
>
  <span>
    Click me
  </span>
</a>
`;

exports[`snapshots — link 25`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer h-10 hover:bg-g-90 focus:bg-g-80 rounded-lg py-2 px-4 button-text"
  rel="noreferrer"
>
  <svg
    aria-hidden="true"
    className="w-6 -ml-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span>
    Click me
  </span>
</a>
`;

exports[`snapshots — link 26`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer h-10 hover:bg-g-90 focus:bg-g-80 rounded-lg py-2 px-4 button-text"
  rel="noreferrer"
>
  <span>
    Click me
  </span>
  <svg
    aria-hidden="true"
    className="w-6 !-mr-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
</a>
`;

exports[`snapshots — link 27`] = `
<a
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer h-10 hover:bg-g-90 focus:bg-g-80 rounded-lg py-2 px-4 button-text"
  rel="noreferrer"
>
  <span>
    Click me
  </span>
</a>
`;

exports[`snapshots — semantic 1`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer bg-g-60 h-10 hover:bg-g-50 focus:bg-g-40 rounded-lg p-3 button-text"
>
  <svg
    aria-hidden="true"
    className="w-4 -ml-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span
    className=""
  >
    Click me
  </span>
</button>
`;

exports[`snapshots — semantic 2`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer bg-g-60 h-10 hover:bg-g-50 focus:bg-g-40 rounded-lg p-3 button-text"
>
  <span
    className=""
  >
    Click me
  </span>
  <svg
    aria-hidden="true"
    className="w-4 !-mr-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`snapshots — semantic 3`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer bg-g-60 h-10 hover:bg-g-50 focus:bg-g-40 rounded-lg p-3 button-text"
>
  <svg
    aria-hidden="true"
    className="w-4 m-0"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span
    className=""
  >
    Click me
  </span>
</button>
`;

exports[`snapshots — semantic 4`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer bg-g-60 h-10 hover:bg-g-50 focus:bg-g-40 rounded-lg px-6 py-4 button-text"
>
  <svg
    aria-hidden="true"
    className="w-5 -ml-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span
    className=""
  >
    Click me
  </span>
</button>
`;

exports[`snapshots — semantic 5`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer bg-g-60 h-10 hover:bg-g-50 focus:bg-g-40 rounded-lg px-6 py-4 button-text"
>
  <span
    className=""
  >
    Click me
  </span>
  <svg
    aria-hidden="true"
    className="w-5 !-mr-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`snapshots — semantic 6`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer bg-g-60 h-10 hover:bg-g-50 focus:bg-g-40 rounded-lg px-6 py-4 button-text"
>
  <svg
    aria-hidden="true"
    className="w-5 m-0"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span
    className=""
  >
    Click me
  </span>
</button>
`;

exports[`snapshots — semantic 7`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer bg-g-60 h-10 hover:bg-g-50 focus:bg-g-40 rounded-lg py-2 px-4 button-text"
>
  <svg
    aria-hidden="true"
    className="w-6 -ml-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span
    className=""
  >
    Click me
  </span>
</button>
`;

exports[`snapshots — semantic 8`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer bg-g-60 h-10 hover:bg-g-50 focus:bg-g-40 rounded-lg py-2 px-4 button-text"
>
  <span
    className=""
  >
    Click me
  </span>
  <svg
    aria-hidden="true"
    className="w-6 !-mr-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`snapshots — semantic 9`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer bg-g-60 h-10 hover:bg-g-50 focus:bg-g-40 rounded-lg py-2 px-4 button-text"
>
  <svg
    aria-hidden="true"
    className="w-6 m-0"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span
    className=""
  >
    Click me
  </span>
</button>
`;

exports[`snapshots — semantic 10`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer custom-gradient hover:hover-gradient focus:pressed-gradient rounded-full p-3 button-text"
>
  <svg
    aria-hidden="true"
    className="w-4 -ml-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span
    className="md:inline-block hidden"
  >
    Click me
  </span>
</button>
`;

exports[`snapshots — semantic 11`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer custom-gradient hover:hover-gradient focus:pressed-gradient rounded-full p-3 button-text"
>
  <span
    className="md:inline-block hidden"
  >
    Click me
  </span>
  <svg
    aria-hidden="true"
    className="w-4 !-mr-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`snapshots — semantic 12`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer custom-gradient hover:hover-gradient focus:pressed-gradient rounded-full p-3 button-text"
>
  <svg
    aria-hidden="true"
    className="w-4 m-0"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span
    className="md:inline-block hidden"
  >
    Click me
  </span>
</button>
`;

exports[`snapshots — semantic 13`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer custom-gradient hover:hover-gradient focus:pressed-gradient rounded-full px-6 py-4 button-text"
>
  <svg
    aria-hidden="true"
    className="w-5 -ml-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span
    className="md:inline-block hidden"
  >
    Click me
  </span>
</button>
`;

exports[`snapshots — semantic 14`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer custom-gradient hover:hover-gradient focus:pressed-gradient rounded-full px-6 py-4 button-text"
>
  <span
    className="md:inline-block hidden"
  >
    Click me
  </span>
  <svg
    aria-hidden="true"
    className="w-5 !-mr-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`snapshots — semantic 15`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer custom-gradient hover:hover-gradient focus:pressed-gradient rounded-full px-6 py-4 button-text"
>
  <svg
    aria-hidden="true"
    className="w-5 m-0"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span
    className="md:inline-block hidden"
  >
    Click me
  </span>
</button>
`;

exports[`snapshots — semantic 16`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer custom-gradient hover:hover-gradient focus:pressed-gradient rounded-full py-2 px-4 button-text"
>
  <svg
    aria-hidden="true"
    className="w-6 -ml-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span
    className="md:inline-block hidden"
  >
    Click me
  </span>
</button>
`;

exports[`snapshots — semantic 17`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer custom-gradient hover:hover-gradient focus:pressed-gradient rounded-full py-2 px-4 button-text"
>
  <span
    className="md:inline-block hidden"
  >
    Click me
  </span>
  <svg
    aria-hidden="true"
    className="w-6 !-mr-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`snapshots — semantic 18`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer custom-gradient hover:hover-gradient focus:pressed-gradient rounded-full py-2 px-4 button-text"
>
  <svg
    aria-hidden="true"
    className="w-6 m-0"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span
    className="md:inline-block hidden"
  >
    Click me
  </span>
</button>
`;

exports[`snapshots — semantic 19`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer h-10 hover:bg-g-90 focus:bg-g-80 rounded-lg p-3 button-text"
>
  <svg
    aria-hidden="true"
    className="w-4 -ml-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span
    className=""
  >
    Click me
  </span>
</button>
`;

exports[`snapshots — semantic 20`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer h-10 hover:bg-g-90 focus:bg-g-80 rounded-lg p-3 button-text"
>
  <span
    className=""
  >
    Click me
  </span>
  <svg
    aria-hidden="true"
    className="w-4 !-mr-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`snapshots — semantic 21`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer h-10 hover:bg-g-90 focus:bg-g-80 rounded-lg p-3 button-text"
>
  <svg
    aria-hidden="true"
    className="w-4 m-0"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span
    className=""
  >
    Click me
  </span>
</button>
`;

exports[`snapshots — semantic 22`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer h-10 hover:bg-g-90 focus:bg-g-80 rounded-lg px-6 py-4 button-text"
>
  <svg
    aria-hidden="true"
    className="w-5 -ml-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span
    className=""
  >
    Click me
  </span>
</button>
`;

exports[`snapshots — semantic 23`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer h-10 hover:bg-g-90 focus:bg-g-80 rounded-lg px-6 py-4 button-text"
>
  <span
    className=""
  >
    Click me
  </span>
  <svg
    aria-hidden="true"
    className="w-5 !-mr-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`snapshots — semantic 24`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer h-10 hover:bg-g-90 focus:bg-g-80 rounded-lg px-6 py-4 button-text"
>
  <svg
    aria-hidden="true"
    className="w-5 m-0"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span
    className=""
  >
    Click me
  </span>
</button>
`;

exports[`snapshots — semantic 25`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer h-10 hover:bg-g-90 focus:bg-g-80 rounded-lg py-2 px-4 button-text"
>
  <svg
    aria-hidden="true"
    className="w-6 -ml-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span
    className=""
  >
    Click me
  </span>
</button>
`;

exports[`snapshots — semantic 26`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer h-10 hover:bg-g-90 focus:bg-g-80 rounded-lg py-2 px-4 button-text"
>
  <span
    className=""
  >
    Click me
  </span>
  <svg
    aria-hidden="true"
    className="w-6 !-mr-2"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`snapshots — semantic 27`] = `
<button
  className="inline-flex items-center space-x-2 transition-all ease-in-out duration-300 hover:cursor-pointer h-10 hover:bg-g-90 focus:bg-g-80 rounded-lg py-2 px-4 button-text"
>
  <svg
    aria-hidden="true"
    className="w-6 m-0"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm13.36-1.814a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z"
      fillRule="evenodd"
    />
  </svg>
  <span
    className=""
  >
    Click me
  </span>
</button>
`;
